[package]
name = "socket_lab"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "socket_lab"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crossterm = { version = "0.22.1", features = ["serde"] }
#rand = "*"
# latest serde has some problems with enum Color 
#serde = { version = "1.0.118", features = ["derive"] }
#serde_yaml = "*"